# mpkg

./: README.md  install.sh  pyproject.toml
mpkg/: cli.py  config.py  logger.py  repology.py  resolver.py
mpkg/backends/: __init__.py  apt.py  base.py  dnf.py  nix.py  pacman.py
